Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.23
* Fixed query string/stdin handling where both stdin and query string are set
* Moved http error framework to use header methods (Chris T)
* Fixed warning about incorrect method for ar/ap transactions (Chris T)
* Fixed fatal gettext errors in ar_EG, fi, nb po's (Havard S)

Changelog for 1.3.22
* Fixed error when trying to save multiple make/models for a part (Chris T)
* Better error handling when date is entered into statement balance (Chris T)
* Added pricegroup selection back to entity credit account (Chris T, 3550056)
* Fix for slow performance with Form->all_years (Chris T, h/t Neil S)[1]
* Revamped database load test cases (Chris T)
* Fixed error on some screens with function not found (Chris T)
* Fixed some test case errors due to tests written against older API (Chris T)
* Fixed error: parts search not loading into the db pn Pg 9.1 only (Chris T)

Chris T is Chris Travers
Neil S is Neil Smith

Footnotes:
[1]:  Problem found on database with approx 200k records spanning a number of
years.  The current approach will do a sequential scan of acc_trans per year
found if no index is there.  Adding the index is required to get this to
perform reasonably well.


Changelog for 1.3.21
* Added a default numberformat in Form.pm (Chris T)
* Added a container div for theming saved and/or posted docs (Chris T)
* Fixed an is_zero error saving purchase transactions (Nick P)
* Fixed shipping selection not displaying customer info (Chris T, 3543932)
* Fixed shipping redirection not displaying orders (Chris T, h/t Nigel T)
* Recon screen now groups journal entries by transaction (Chris T, h/t Nick P)
* Fixed empty string working as empty source for cash recon (Chris T)
* Saving a part now returns to editing the same part (Chris T, h/t Brian W)
* If pos.conf.pl is not found, now returns an intelligible error (Chris T)